--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,20 @@
 
     <ImageView
         android:id="@+id/imageView9"
-        android:layout_width="395dp"
-        android:layout_height="482dp"
+        android:layout_width="315dp"
+        android:layout_height="420dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/dog"
-        tools:layout_editor_absoluteY="251dp" />
+        tools:layout_editor_absoluteY="237dp" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CHARLIE"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="718dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
