--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,20 +10,26 @@
 
     <ImageView
         android:id="@+id/imageView9"
-        android:layout_width="315dp"
-        android:layout_height="420dp"
+        android:layout_width="220dp"
+        android:layout_height="330dp"
+        android:layout_marginTop="120dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.45"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/dog"
-        tools:layout_editor_absoluteY="237dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/dog" />
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="119dp"
+        android:layout_height="40dp"
         android:text="Charlie"
+        android:textAlignment="center"
+        android:textSize="32sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.479"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="718dp" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView9" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
