--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F8F8F7"
+    android:background="#63EA70A0"
+    android:clickable="false"
     android:rotationX="0"
-    tools:context=".MainActivity" >
+    tools:context=".MainActivity">
 
     <ImageView
         android:id="@+id/imageView9"
@@ -21,15 +22,17 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="119dp"
-        android:layout_height="40dp"
+        android:layout_width="183dp"
+        android:layout_height="43dp"
+        android:fontFamily="@font/gorditas_bold"
         android:text="Charlie"
         android:textAlignment="center"
+        android:textColor="#844502"
         android:textSize="32sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.479"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView9" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
