--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,9 +13,9 @@
         android:id="@+id/imageView9"
         android:layout_width="220dp"
         android:layout_height="330dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="84dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.45"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/dog" />
@@ -24,15 +24,37 @@
         android:id="@+id/textView5"
         android:layout_width="183dp"
         android:layout_height="43dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="@font/gorditas_bold"
         android:text="Charlie"
         android:textAlignment="center"
         android:textColor="#844502"
         android:textSize="32sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.479"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView9" />
+
+    <Button
+        android:id="@+id/Button"
+        style="@android:style/Widget.Button"
+        android:layout_width="116dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginBottom="40dp"
+        android:background="#C17B31"
+        android:fontFamily="@font/gorditas_bold"
+        android:singleLine="true"
+        android:soundEffectsEnabled="true"
+        android:text="BARK"
+        android:textColor="#F8F5F5"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/textView5"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="@id/textView5"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
